# paidtest

./: .env  Makefile  README.md  alembic.ini  main.py  pyproject.toml  settings.py
apps/: schema.py
apps/calls/: models.py  schema.py  types.py  utils.py  views.py
apps/common/auth/: decorators.py  jwt.py
apps/common/database/: __init__.py  database.py  mixin.py
apps/common/migrations/: env.py
apps/common/migrations/versions/: b1178cea95b4_.py
apps/users/: models.py  schema.py  views.py
